[metadata]
name = nixos-sf-atlassian-tools
description = Some atlassian admin tools to support nixos-secure-factory based projects
long-description = file: README.md
author = Mathieu Alexandre-Tétreault
author_email = alexandretm@amotus.ca
license = 'Apache License 2.0'

platform = any

[options]
package_dir=
     =src
packages = find:

zip_safe = false
include_package_data = true
python_requires = >= 3.7
setup_requires =
    setuptools

install_requires =
    atlassian-python-api
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nixos-sf-bitbucket = nixos_sf_atlassian_tools.bitbucket_cli:cli
